- add example test object and initial unittest handling for console only

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,21 @@
 cmake_minimum_required(VERSION 2.8)
 project(Unittest)
 
+if( NOT CMAKE_BUILD_TYPE )
+  set( CMAKE_BUILD_TYPE Debug CACHE STRING
+       "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
+       FORCE )
+endif()
+
+include_directories(
+    src
+    src/test_object
+)
+
 # the main library to link with project - projects should only use unittest.h
 add_library(unittest
-	src/unitest.c
-	src/unitest.h
+	src/unittest.c
+	src/unittest.h
 	README.md
 	Doxyfile
 )
